[gd_scene load_steps=9 format=3 uid="uid://rci3f2t4gt5"]

[ext_resource type="Script" uid="uid://sdbbhqmrqx28" path="res://source/gui/menus/pack_viewer.gd" id="1_df8jn"]
[ext_resource type="PackedScene" uid="uid://4ylo0t6wf2a0" path="res://source/gui/card_image.tscn" id="2_gddhk"]
[ext_resource type="FontFile" uid="uid://bb7mjr65gyr7i" path="res://assets/fonts/04B_30__.TTF" id="2_tiaid"]
[ext_resource type="Texture2D" uid="uid://bvmx30geg4a86" path="res://assets/ui/UI_Clock_cropped.png" id="4_kquc2"]
[ext_resource type="FontFile" uid="uid://b00a6crxmm10e" path="res://assets/fonts/Pix32.ttf" id="5_x8tho"]

[sub_resource type="LabelSettings" id="LabelSettings_kquc2"]
font = ExtResource("2_tiaid")
font_size = 37
outline_size = 12
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3vte1"]
font = ExtResource("5_x8tho")
font_size = 37
outline_size = 8
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x8tho"]
font = ExtResource("5_x8tho")
font_size = 36
outline_size = 8
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[node name="PackViewer" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_df8jn")

[node name="BGFade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 550
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 550
theme_override_constants/margin_bottom = 200

[node name="BG" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.9607843, 0.9019608, 0.7882353, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 92.095)
layout_mode = 2
text = "Discard Pile"
label_settings = SubResource("LabelSettings_kquc2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="CardImage" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("2_gddhk")]
layout_mode = 2

[node name="CardImage2" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("2_gddhk")]
layout_mode = 2

[node name="CardImage3" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("2_gddhk")]
layout_mode = 2

[node name="CardImage4" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("2_gddhk")]
layout_mode = 2

[node name="CardImage5" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("2_gddhk")]
layout_mode = 2

[node name="CardImage6" parent="MarginContainer/VBoxContainer/ScrollContainer/CardGrid" instance=ExtResource("2_gddhk")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 20

[node name="CloseButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(186, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_kquc2")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"
label_settings = SubResource("LabelSettings_3vte1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptyLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "- EMPTY -"
label_settings = SubResource("LabelSettings_x8tho")
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
